--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -90,6 +90,14 @@ a{
     .tit_2{
       display: none;
     }
+    .tit_1{
+      display: block;
+      width: 132px;
+      height: 126px;
+      margin: 0 auto;
+      position: relative;
+      z-index: 1;
+    }
     text-align: center;
     padding-top: 12px;
   }
@@ -116,6 +124,7 @@ a{
         &:hover{
           color: #fff;
         }
+        height: inherit!important;
         display: block;
         padding: 5px 0;
         padding-right: 0!important;
@@ -123,6 +132,7 @@ a{
         color: #cddbb1;
         font-size: 15px;
         line-height: 50px;
+        height: 50px;
       }
     }
   }
@@ -148,6 +158,7 @@ a{
         &:hover{
           color: #fff;
         }
+        height: inherit!important;
         display: block;
         padding: 5px 0;
         padding-right: 0!important;
@@ -166,10 +177,16 @@ a{
   li{
     float: left;
      &:first-child a{
+      display: block;
+      height: 100px;
       padding-right: 30px;
       background: url(../images/common/sp_bar1.png) right 6px no-repeat;
     }
-    +li a{padding-left: 30px;}
+    +li a{
+      display: block;
+      height: 100px;
+      padding-left: 30px;
+    }
   }
  }
  .submenu{
