--- a/src/sass/tip.scss
+++ b/src/sass/tip.scss
@@ -3,6 +3,9 @@
   display: block;
 }
 .tip_wrap{
+  .hide{
+    display: none;
+  }
     margin-top: 86px;
   h2{
     margin-bottom: 40px;
@@ -120,7 +123,7 @@
   }
 }
 .tip2_wrap{
-  display: block;
+  display: none;
 ul{
   padding: 0 25px;
   li{
