--- a/src/sass/history.scss
+++ b/src/sass/history.scss
@@ -27,6 +27,10 @@
   top: 0;
   left: 0;
   li{
+    .on{
+      background: #b68957;
+      color: #fff;
+    }
     a{
       display: block;
       width: 150px;
@@ -34,11 +38,7 @@
       line-height: 35px;
       text-align: center;
       color: #b68957;
-      font-size: 18px;
-      &:hover,&:focus{
-        background: #b68957;
-        color: #fff;
-      }
+      font-size: 18px;        
     }
   }
 }
