--- a/src/sass/history.scss
+++ b/src/sass/history.scss
@@ -38,7 +38,7 @@
       line-height: 35px;
       text-align: center;
       color: #b68957;
-      font-size: 18px;        
+      font-size: 18px;
     }
   }
 }
@@ -132,6 +132,9 @@ dl{
     background: none!important;
   }
   .history_main .color_76{width: 100%;}
+  .history_wrap{
+    margin-top: 35px;
+  }
 }
 
 @media (max-width:860px) {
