--- a/src/sass/news.scss
+++ b/src/sass/news.scss
@@ -66,7 +66,7 @@
  }
 }
 .number{
-  width: 205px;
+  width: 210px;
   margin: 0 auto;
   margin-bottom: 50px;
     li{
@@ -88,6 +88,8 @@
   width: 441px;
   margin: auto;
   input{
+    line-height: 33px;
+    padding-right: 40px;
     margin-left: 4px;
     vertical-align: middle;
     width: 298px;
